--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20240625 - La farsa</li>
 <li>20240610 - Cuenta regresiva</li>
 <li>20240604 - Ponzi político</li>
 <li>20240602 - Decisión salomónica</li>
