--- a/lun/index.html
+++ b/lun/index.html
@@ -92,7 +92,7 @@ gap: 5px;
 
 <div class="img-container">
 <img src="/img/lun/20240625.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20240709.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
