--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20240711 - Equalización de derechos y deberes</li>
+<li>20240709 - Enemigos íntimos</li>
 <li>20240625 - La farsa</li>
 <li>20240610 - Cuenta regresiva</li>
 <li>20240604 - Ponzi político</li>
@@ -451,6 +453,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240706 - La vida de los peces</li>
+<li>20240629 - Tendencia al alza de Boric</li>
 <li>20240623 - Plan Z</li>
 <li>20240616 - La tormenta perfecta: Berlín, Estocolmo, Madrid y Cabo del Espíritu Santo</li>
 <li>20240609 - Promesas vacías, coherencia política y normalización por defecto</li>
