--- a/lun/index.html
+++ b/lun/index.html
@@ -94,7 +94,7 @@ gap: 5px;
 <img src="/img/lun/20240625.jpeg">
 <img src="/img/lun/20240709.jpeg">
 <img src="/img/lun/20240711.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20240713.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
