--- a/covers/index.html
+++ b/covers/index.html
@@ -222,9 +222,9 @@ gap: 5px;
 <h3 id="on-the-front-page">El Mercurio</h3>
 
 <div class="img-container">
+    <img src="/img/20240718%20-%20El%20Mercurio.png"> 
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
     <img src="/img/20210225%20-%20El%20Mercurio.png">
-    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <h3 id="on-the-front-page">Regional</h3>
