--- a/covers/index.html
+++ b/covers/index.html
@@ -223,8 +223,15 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240718%20-%20El%20Mercurio.png"> 
+    <img src="/img/20230718b%20-%20El%20Mercurio.png"> 
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
+</div>
+
+<div class="img-container">
     <img src="/img/20210225%20-%20El%20Mercurio.png">
+    <img src="/img/20220220%20-%20El%20Mercurio.png"> 
+    <img src="/img/lun/blanco.jpeg">
+
 </div>
 
 <h3 id="on-the-front-page">Regional</h3>
