--- a/interviews/index.html
+++ b/interviews/index.html
@@ -70,6 +70,8 @@
 <hr>
 <ul>
 
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-veto-del-gobierno-es-una-medida-hecha-con-el-mapa-y-la-calculadora-en-la-mano-propia-de-paises-subdesarrollados/">Kenneth Bunker y veto del Gobierno: “Una medida hecha con mapa y calculadora en mano, propia de países subdesarrollados”.</a> 25 July, 2024.</li>
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-siempre-el-voto-obligatorio-va-a-ser-un-voto-en-contra-del-gobierno-de-turno/">Kenneth Bunker: “Siempre el voto obligatorio va a ser un voto en contra del Gobierno de turno”</a> 10 July, 2024.</li>
 
 <li><strong>T13</strong>. <a href="https://tele13radio.cl/article/propuesta-de-reforma-politica-junto-a-kenneth-bunker-director-del-laboratorio-de-democracia-y-gobierno-de-la-uss">Propuesta de reforma política con Kenneth Bunker: Directror del Laboratorio de Democracia y Gobierno USS</a> 2 July, 2024.</li>
