--- a/columns/index.html
+++ b/columns/index.html
@@ -680,6 +680,8 @@ mark {
 <p><a href="https://www.latercera.cl"><em>La Tercera</em></a></p>
 <hr>
 <ul>
+
+<li>20240727 - <a href="https://www.latercera.com/campuslt/noticia/reforma-al-sistema-politico-cuando-quien-y-como/MSF6UVI6URFPRLLZ7ZG3GRBRJY/">Reforma al sistema político: cuándo, quién y cómo.</a></li>
 <li>20170731 - La debacle de la DC</li>
 <li>20170629 - La peor pesadilla</li>
 <li>20170615 - Conflictos reales y artificiales</li>
