--- a/covers/index.html
+++ b/covers/index.html
@@ -111,7 +111,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240122%20-%20La%20Segunda.png"> 
     <img src="/img/20240424%20-%20La%20Segunda.png"> 
-    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/20240730%20-%20La%20Segunda.png"> 
 </div>
 
 <div class="img-container">
