--- a/index.html
+++ b/index.html
@@ -2530,10 +2530,15 @@ https://www.ft.com/content/70611572-1563-47d1-b0d7-0bc9aadf9138?accessToken=zwAA
 
 <li><strong>Bloomberg</strong>. <a href="https://www.df.cl/noticias/economia-y-politica/politica/bloomberg-en-un-pais-simbolo-del-libre-mercado-dos-jovenes-comunistas/2019-08-20/104726.html">En un país símbolo del libre mercado dos jóvenes comunistas están sorpresivamente marcando la agenda.</a> 20 august, 2019.
 </li>
-<li><strong>RFI France</strong>. <a href="https://www.rfi.fr/es/americas/20180312-chile-pinera-va-buscar-mejorar-los-programas-de-bachelet">Chile: ‘Piñera va a buscar mejorar los programas de Bachelet’.</a> 12 march, 2019.
-</li>
-<li><strong>Perfil</strong>. <a href="https://www.perfil.com/noticias/bloomberg/bc-muerte-de-comunero-mapuche-revive-conflicto-mas-antiguo-de-chile.phtml">Muerte de un dirigente mapuche revive el conflicto más antiguo de Chile.</a> 19 november, 2018.
-</li>
+
+<li><strong>Perfil</strong>. <a href="https://www.perfil.com/noticias/politica/elecciones2019-modelo-predictivo-encuestas-le-da-ventaja-cinco-puntos-alberto-fernandez-sobre-mauricio-macri.phtml">Un modelo predictivo de encuestas le da una ventaja de 5 puntos a Alberto Fernández sobre Mauricio Macri.</a> 2 August, 2019.</li>
+
+<li><strong>El Economista</strong>. <a href="https://eleconomista.com.ar/politica/modelo-predictivo-proyecta-diferencia-5-alberto-f-n26814">Modelo predictivo proyecta diferencia de 5% para Alberto F.</a> 2 August, 2019.</li>
+
+<li><strong>RFI France</strong>. <a href="https://www.rfi.fr/es/americas/20180312-chile-pinera-va-buscar-mejorar-los-programas-de-bachelet">Chile: ‘Piñera va a buscar mejorar los programas de Bachelet’.</a> 12 march, 2019.</li>
+
+<li><strong>Perfil</strong>. <a href="https://www.perfil.com/noticias/bloomberg/bc-muerte-de-comunero-mapuche-revive-conflicto-mas-antiguo-de-chile.phtml">Muerte de un dirigente mapuche revive el conflicto más antiguo de Chile.</a> 19 november, 2018.</li>
+
 <li><strong>BBC</strong>. <a href="https://oglobo.globo.com/mundo/pinera-assume-presidencia-do-chile-pela-segunda-vez-com-mais-maturidade-22478364">Piñera assume Presidência do Chile pela segunda vez com &#39;mais maturidade&#39;.</a> 11 march, 2018.
 </li>
 <li><strong>O Globo</strong>. <a href="https://oglobo.globo.com/mundo/pinera-assume-presidencia-do-chile-pela-segunda-vez-com-mais-maturidade-22478364">Piñera assume Presidência do Chile pela segunda vez com &#39;mais maturidade&#39;.</a> 11 march, 2018.
