--- a/press/index.html
+++ b/press/index.html
@@ -696,8 +696,12 @@
 <li><strong>Americas Quarterly</strong>. <a href="https://www.americasquarterly.org/article/four-ways-chiles-protests-could-reshape-its-politics/">Four Ways Chile’s Protests Could Reshape Its Politics.</a> 1 November, 2019.
 </li>
 
-<li><strong>Bloomberg</strong>. <a href="https://www.df.cl/noticias/economia-y-politica/politica/bloomberg-en-un-pais-simbolo-del-libre-mercado-dos-jovenes-comunistas/2019-08-20/104726.html">En un país símbolo del libre mercado dos jóvenes comunistas están sorpresivamente marcando la agenda.</a> 20 august, 2019.
-</li>
+<li><strong>Bloomberg</strong>. <a href="https://www.df.cl/noticias/economia-y-politica/politica/bloomberg-en-un-pais-simbolo-del-libre-mercado-dos-jovenes-comunistas/2019-08-20/104726.html">En un país símbolo del libre mercado dos jóvenes comunistas están sorpresivamente marcando la agenda.</a> 20 august, 2019.</li>
+
+<li><strong>Perfil</strong>. <a href="https://www.perfil.com/noticias/politica/elecciones2019-modelo-predictivo-encuestas-le-da-ventaja-cinco-puntos-alberto-fernandez-sobre-mauricio-macri.phtml">Un modelo predictivo de encuestas le da una ventaja de 5 puntos a Alberto Fernández sobre Mauricio Macri.</a> 2 August, 2019.</li>
+
+<li><strong>El Economista</strong>. <a href="https://eleconomista.com.ar/politica/modelo-predictivo-proyecta-diferencia-5-alberto-f-n26814">Modelo predictivo proyecta diferencia de 5% para Alberto F.</a> 2 August, 2019.</li>
+
 <li><strong>RFI France</strong>. <a href="https://www.rfi.fr/es/americas/20180312-chile-pinera-va-buscar-mejorar-los-programas-de-bachelet">Chile: ‘Piñera va a buscar mejorar los programas de Bachelet’.</a> 12 march, 2019.
 </li>
 <li><strong>Perfil</strong>. <a href="https://www.perfil.com/noticias/bloomberg/bc-muerte-de-comunero-mapuche-revive-conflicto-mas-antiguo-de-chile.phtml">Muerte de un dirigente mapuche revive el conflicto más antiguo de Chile.</a> 19 november, 2018.
