--- a/index.html
+++ b/index.html
@@ -136,13 +136,21 @@ mark {
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
 
-<p><mark style="background: #ffffff#08FF08!important">2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.”<em>Party Politics</em>. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></mark></p>
 
-<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
+ <p>2024. Between Gattopardismo and Ideational Change: The Mainstream Chilean Right's Winding Road to Moderation, in <em>The Recasting of the Latin American Right
+Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloyd and Gabriel Vommaro].</em>. (with  Stéphanie Alenda, Miguel Angel López, and Nicolás Miranda). <a href="https://www.cambridge.org/it/universitypress/subjects/politics-international-relations/latin-american-government-politics-and-policy/recasting-latin-american-right-polarization-and-conservative-reactions?format=HB&isbn=9781009427449">Cambridge</a></mark></p>
+
+
+ Stéphanie Alenda, Miguel Angel López, Kenneth Bunker and Nicolás Miranda
+
+
+<p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.”<em>Party Politics</em>. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></mark></p>
+
+<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error.” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
 <p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
 
-<p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
+<p>2021. “A two-stage model to forecast elections in new democracies.” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
 
 <p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
 
@@ -169,7 +177,7 @@ mark {
 <p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">Twitter</a>!</p>
 <hr>
 <h2 id="links">Links</h2>
-<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
+<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
 
 
 <hr>
