--- a/interviews/index.html
+++ b/interviews/index.html
@@ -70,6 +70,8 @@
 <hr>
 <ul>
 
+<li><strong>Nuevo Poder</strong>. <a href="https://www.nuevopoder.cl/bunker-nunca-hubo-tanto-proyecto-en-seguridad-porque-nunca-se-necesitaron-tanto/">Bunker: «Nunca hubo tanto proyecto en seguridad porque nunca se necesitaron tanto».</a> 26 August, 2024.</li>
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-veto-del-gobierno-es-una-medida-hecha-con-el-mapa-y-la-calculadora-en-la-mano-propia-de-paises-subdesarrollados/">Kenneth Bunker y veto del Gobierno: “Una medida hecha con mapa y calculadora en mano, propia de países subdesarrollados”.</a> 25 July, 2024.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-siempre-el-voto-obligatorio-va-a-ser-un-voto-en-contra-del-gobierno-de-turno/">Kenneth Bunker: “Siempre el voto obligatorio va a ser un voto en contra del Gobierno de turno”</a> 10 July, 2024.</li>
