--- a/lun/index.html
+++ b/lun/index.html
@@ -96,7 +96,7 @@ gap: 5px;
 <img src="/img/lun/20240711.jpeg">
 <img src="/img/lun/20240713.jpeg">
 <img src="/img/lun/20240730.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20240828.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
