--- a/covers/index.html
+++ b/covers/index.html
@@ -109,6 +109,12 @@ gap: 5px;
 <h3 id="on-the-front-page">La Segunda</h3>
 
 <div class="img-container">
+    <img src="/img/20240923%20-%20La%20Segunda.png"> 
+    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/lun/blanco.jpeg">
+</div>
+
+<div class="img-container">
     <img src="/img/20240122%20-%20La%20Segunda.png"> 
     <img src="/img/20240424%20-%20La%20Segunda.png"> 
     <img src="/img/20240730%20-%20La%20Segunda.png"> 
