--- a/interviews/index.html
+++ b/interviews/index.html
@@ -70,6 +70,8 @@
 <hr>
 <ul>
 
+<li><strong>La Segunda</strong>. <a href="https://www.lun.com/Pages/NewsDetail.aspx?dt=2024-09-22&EsAviso=0&PaginaId=8&bodyid=0">Bunker: "Se están creando megacoaliciones donde seguirá habiendo problemas de gobernabilidad".</a> 23 September, 2024.</li>
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-debate-por-informe-del-pnud-parece-mas-un-borrador-de-un-programa-politico-que-un-reporte-imparcial">Kenneth Bunker y debate por informe del PNUD: “Parece más un borrador de un programa político que un reporte imparcial”.</a> 6 September, 2024.</li>
 
 <li><strong>Nuevo Poder</strong>. <a href="https://www.nuevopoder.cl/bunker-nunca-hubo-tanto-proyecto-en-seguridad-porque-nunca-se-necesitaron-tanto/">Bunker: «Nunca hubo tanto proyecto en seguridad porque nunca se necesitaron tanto».</a> 26 August, 2024.</li>
