--- a/lun/index.html
+++ b/lun/index.html
@@ -98,8 +98,8 @@ gap: 5px;
 <img src="/img/lun/20240730.jpeg">
 <img src="/img/lun/20240828.jpeg">
 <img src="/img/lun/20240910.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20240922.jpeg">
+<img src="/img/lun/20240927.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
 
