--- a/lun/index.html
+++ b/lun/index.html
@@ -100,7 +100,7 @@ gap: 5px;
 <img src="/img/lun/20240910.jpeg">
 <img src="/img/lun/20240922.jpeg">
 <img src="/img/lun/20240927.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241002.jpeg">
 </div>
 
 <div class="img-container">
