--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,10 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20241002 - El mundo al revés</li>
+<li>20240927 - Coletazos del estallido</li>
+<li>20240910 - Amigos de los amigos</li>
+<li>20240828 - Un mejor futuro</li>
 <li>20240730 - Sin medias tintas</li>
 <li>20240713 - Voluntad de hacer lo posible</li>
 <li>20240711 - Equalización de derechos y deberes</li>
@@ -455,6 +459,12 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240906 - El programa electoral Boric-Bachelet</li>
+<li>20240830 - Imprudencia presidencial</li>
+<li>20240823 - Morir con las botas puestas</li>
+<li>20240816 - Persecusión en nombre del progreso</li>
+<li>20240809 - El buen desempeño en la crisis eléctrica</li>
+<li>20240802 - La relativización de la democracia</li>
 <li>20240728 - La crisis de seguridad es culpa del modelo</li>
 <li>20240721 - Bifurcación en el camino: normalización o radicalización</li>
 <li>20240714 - El mal de Dorian Gray</li>
