--- a/columns/index.html
+++ b/columns/index.html
@@ -459,6 +459,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20241006 - Lo que el estallido se llevó</li>
 <li>20240906 - El programa electoral Boric-Bachelet</li>
 <li>20240830 - Imprudencia presidencial</li>
 <li>20240823 - Morir con las botas puestas</li>
