--- a/prensa/index.html
+++ b/prensa/index.html
@@ -75,6 +75,7 @@
 <hr>
 <ul>
 
+<li><strong>Las Últimas Noticias</strong>. <a href="https://www.ex-ante.cl/los-inesperados-obstaculos-de-la-derecha-en-la-recta-final-de-la-campana-municipal/">Exministro Harald Beyer detecta tres similitudes entre los proyectos de Piñera y Boric para terminar con el CAE.</a> 10 October, 2024.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/los-inesperados-obstaculos-de-la-derecha-en-la-recta-final-de-la-campana-municipal/">¿Los inesperados obstáculos de la derecha en la recta final de la campaña municipal.</a> 02 October, 2024.</li>
 
