--- a/columns/index.html
+++ b/columns/index.html
@@ -118,7 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
-<li>20241002 - Saludo a la bandera</li>    
+<li>20241011 - Justicia selectiva</li>    
+<li>20241009 - Saludo a la bandera</li>    
 <li>20241002 - El mundo al revés</li>
 <li>20240927 - Coletazos del estallido</li>
 <li>20240910 - Amigos de los amigos</li>
