--- a/lun/index.html
+++ b/lun/index.html
@@ -93,8 +93,8 @@ gap: 5px;
 <div class="img-container">
 <img src="/img/lun/20241009.jpeg">
 <img src="/img/lun/20241011.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241017.jpeg">
+<img src="/img/lun/20241018.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
