--- a/press/index.html
+++ b/press/index.html
@@ -72,6 +72,11 @@
 <hr> 
 <ul>
 
+
+Cinco años del estallido social que soñó con cambiarlo todo en Chile: “Quieren eliminar el recuerdo de lo que pasó”
+
+<li><strong>El Diario</strong>. <a href="https://www.eldiario.es/internacional/cinco-anos-estallido-social-sono-cambiarlo-chile-quieren-eliminar-recuerdo-paso_1_11741303.html">Cinco años del estallido social que soñó con cambiarlo todo en Chile: “Quieren eliminar el recuerdo de lo que pasó”.</a> 21 October, 2024.</li>
+
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2024-05-31/a-12-billion-student-loan-break-puts-chile-leader-on-back-foot">A $12 Billion Student Loan Break Puts Chile Leader on Back Foot.</a> 1 June, 2024.</li>
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2024-05-31/promesa-de-eliminar-deuda-estudiantil-enreda-a-presidente-boric-en-chile">Una promesa de eliminar deuda estudiantil enreda al presidente Boric en Chile.</a> 1 June, 2024.</li>
