--- a/covers/index.html
+++ b/covers/index.html
@@ -228,6 +228,12 @@ gap: 5px;
 <h3 id="on-the-front-page">El Mercurio</h3>
 
 <div class="img-container">
+    <img src="/img/20241029%20-%20El%20Mercurio.png">
+    <img src="/img/20241029_2%20-%20El%20Mercurio.png"> 
+    <img src="/img/lun/blanco.jpeg">
+</div>
+
+<div class="img-container">
     <img src="/img/20240718%20-%20El%20Mercurio.png"> 
     <img src="/img/20240719%20-%20El%20Mercurio.png"> 
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
@@ -237,7 +243,6 @@ gap: 5px;
     <img src="/img/20210225%20-%20El%20Mercurio.png">
     <img src="/img/20220220%20-%20El%20Mercurio.png"> 
     <img src="/img/lun/blanco.jpeg">
-
 </div>
 
 <h3 id="on-the-front-page">Regional</h3>
