--- a/lun/index.html
+++ b/lun/index.html
@@ -95,7 +95,7 @@ gap: 5px;
 <img src="/img/lun/20241011.jpeg">
 <img src="/img/lun/20241017.jpeg">
 <img src="/img/lun/20241018.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241028.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
