--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20241028 - Voto de protesta</li>    
+<li>20241018 - Filosofia barata</li>    
 <li>20241011 - Justicia selectiva</li>    
 <li>20241009 - Saludo a la bandera</li>    
 <li>20241002 - El mundo al revés</li>
@@ -461,7 +463,10 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
-<li>20241006 - Lo que el estallido se llevó</li>
+<li>20241025 - La semana negra del gobierno</li>
+<li>20241018 - Secuelas del estallido social</li>
+<li>20241011 - La caída del intocable</li>
+<li>20241004 - Un par de postes, cuatro baldes</li>
 <li>20240906 - El programa electoral Boric-Bachelet</li>
 <li>20240830 - Imprudencia presidencial</li>
 <li>20240823 - Morir con las botas puestas</li>
