--- a/press/index.html
+++ b/press/index.html
@@ -75,6 +75,8 @@
 
 <li><strong>Financial Times</strong>. <a href="https://www.ft.com/content/b2d94c3e-6905-4024-83ef-d9c3895c4fb4">Chile’s leftwing government hit by rape scandal.</a> 29 October, 2024.</li>
 
+<li><strong>The Straits Times</strong>. <a href="https://www.straitstimes.com/world/chiles-right-gains-against-boric-government-in-less-polarising-regional-vote4">Chile's right gains against Boric government in less polarising regional vote.</a> 29 October, 2024.</li>
+
 <li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/oposicion-chilena-avanza-en-elecciones-regionales-pero-gobierno-izquierdista-evita-debacle-nid28102024/">Oposición chilena avanza en elecciones regionales pero gobierno izquierdista evita debacle.</a> 28 October, 2024.</li>
 
 <li><strong>AOL</strong>. <a href=" https://www.aol.com/news/chiles-gains-against-boric-government-155556221.html">Chile's right gains against Boric government in less polarizing regional vote.</a> 28 October, 2024.</li>
