--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20241107 - Ya no queda nadie</li>    
 <li>20241028 - Voto de protesta</li>    
 <li>20241018 - Filosofia barata</li>    
 <li>20241011 - Justicia selectiva</li>    
@@ -463,6 +464,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20241101 - De faro moral a desilusión y derrota</li>
 <li>20241025 - La semana negra del gobierno</li>
 <li>20241018 - Secuelas del estallido social</li>
 <li>20241011 - La caída del intocable</li>
