--- a/lun/index.html
+++ b/lun/index.html
@@ -96,7 +96,7 @@ gap: 5px;
 <img src="/img/lun/20241017.jpeg">
 <img src="/img/lun/20241018.jpeg">
 <img src="/img/lun/20241028.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241107.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
