--- a/columns/index.html
+++ b/columns/index.html
@@ -464,7 +464,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
-<li>20241101 - De faro moral a desilusión y derrota</li>
+<li>20241110 - Complacencia como regla</li>
+<li>20241102 - De faro moral a desilusión y derrota</li>
 <li>20241025 - La semana negra del gobierno</li>
 <li>20241018 - Secuelas del estallido social</li>
 <li>20241011 - La caída del intocable</li>
