--- a/lun/index.html
+++ b/lun/index.html
@@ -98,7 +98,7 @@ gap: 5px;
 <img src="/img/lun/20241028.jpeg">
 <img src="/img/lun/20241107.jpeg">
 <img src="/img/lun/20241111.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241112.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
