--- a/lun/index.html
+++ b/lun/index.html
@@ -100,7 +100,7 @@ gap: 5px;
 <img src="/img/lun/20241111.jpeg">
 <img src="/img/lun/20241112.jpeg">
 <img src="/img/lun/20241115.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241116.jpeg">
 </div>
 
 <div class="img-container">
