--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20241126 - Las tres verdades</li>    
+<li>20241125 - Diablo conocido</li>    
 <li>20241115 - Las dos versiones</li>    
 <li>20241111 - Política corrosiva</li>    
 <li>20241107 - Ya no queda nadie</li>    
@@ -466,6 +468,9 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20241131 - Elasticidad moral</li>
+<li>20241124 - Entre la realidad y la ilusión</li>
+<li>20241117 - De promesa a perdición</li>
 <li>20241110 - Complacencia como regla</li>
 <li>20241103 - De faro moral a desilusión y derrota</li>
 <li>20241025 - La semana negra del gobierno</li>
