--- a/lun/index.html
+++ b/lun/index.html
@@ -96,7 +96,7 @@ gap: 5px;
 <img src="/img/lun/20241206.jpeg">
 <img src="/img/lun/20241207.jpeg">
 <img src="/img/lun/20241211.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241213.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
