--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,14 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+
+<li>20241213 - El incómodo señor Crispi</li>  
+<li>20241211 - A favor de quién</li>  
+<li>20241207 - El alcalde egoísta</li>  
+<li>20241206 - Política fetichista</li>  
+<li>20241126 - Cuatro verdades</li>  
+<li>20241125 - Diablo conocido</li>  
+<li>20241116 - En defensa de la virtud</li>  
 <li>20241126 - Las tres verdades</li>    
 <li>20241125 - Diablo conocido</li>    
 <li>20241115 - Las dos versiones</li>    
