--- a/prensa/index.html
+++ b/prensa/index.html
@@ -75,6 +75,8 @@
 <hr>
 <ul>
 
+<li><strong>La Segunda</strong>. <a href="https://www.ex-ante.cl/pensiones-el-riesgo-de-un-descuelgue-por-la-izquierda-y-el-volanteo-del-fa-que-congrego-a-solo-30-personas/">La advertencia evangélica: acuerdo la primera quincena de enero, o van separados.</a> 21 December, 2024.</li>
+
 <li><strong>Ex Ante</strong>. <a href="https://www.ex-ante.cl/pensiones-el-riesgo-de-un-descuelgue-por-la-izquierda-y-el-volanteo-del-fa-que-congrego-a-solo-30-personas/">Pensiones: El riesgo de un descuelgue por la izquierda y el “volanteo” del FA que congregó a solo 30 personas.</a> 20 December, 2024.</li>
 
 <li><strong>Ex Ante</strong>. <a href="https://www.ex-ante.cl/pensiones-el-riesgo-de-un-descuelgue-por-la-izquierda-y-el-volanteo-del-fa-que-congrego-a-solo-30-personas/">Kenneth Bunker por magras cifras económicas: “Cuando anda mal el bolsillo, las personas buscan respuestas en otro domicilio político”.</a> 19 December, 2024.</li>
