--- a/lun/index.html
+++ b/lun/index.html
@@ -98,7 +98,7 @@ gap: 5px;
 <img src="/img/lun/20241211.jpeg">
 <img src="/img/lun/20241213.jpeg">
 <img src="/img/lun/20241221.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20241226.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
