--- a/columns/index.html
+++ b/columns/index.html
@@ -118,7 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
-
+<li>20241231 - Los autocomplacientes</li>  
+<li>20241221 - Algo huele mal en Dinamarca</li>  
 <li>20241213 - El incómodo señor Crispi</li>  
 <li>20241211 - A favor de quién</li>  
 <li>20241207 - El alcalde egoísta</li>  
@@ -476,6 +477,11 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20250102 - Autocomplacencia en el poder</li>
+<li>20241228 - Treinta años de retroceso</li>
+<li>20241221 - Caputo, Boric y el PC</li>
+<li>20241212 - Dominga y el nuevo discurso</li>
+<li>20241207 - Privilegios y poder </li>
 <li>20241131 - Elasticidad moral</li>
 <li>20241124 - Entre la realidad y la ilusión</li>
 <li>20241117 - De promesa a perdición</li>
