--- a/lun/index.html
+++ b/lun/index.html
@@ -100,7 +100,7 @@ gap: 5px;
 <img src="/img/lun/20241221.jpeg">
 <img src="/img/lun/20241226.jpeg">
 <img src="/img/lun/20241231.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250111.jpeg">
 </div>
 
 <div class="img-container">
