--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20250115 - Los aprendices</li>  
+<li>20250111 - El auge del autoritarismo</li>  
 <li>20241231 - Los autocomplacientes</li>  
 <li>20241221 - Algo huele mal en Dinamarca</li>  
 <li>20241213 - El incómodo señor Crispi</li>  
@@ -477,6 +479,9 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20250125 - Kaise: El outsider de la derecha</li>
+<li>20250116 - Entre la sospecha y el progreso: el futuro de las pensiones</li>
+<li>20250109 - La gallina de los huevos de oro: el debate sobre las pensiones</li>
 <li>20250102 - Autocomplacencia en el poder</li>
 <li>20241228 - Treinta años de retroceso</li>
 <li>20241221 - Caputo, Boric y el PC</li>
