--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ mark {
 <ul>
 
 
+<p>2025.“Electoral Forecasting in Volatile Party System Settings: Assessing and Improving Pre-Election Poll Predictions in Italy.”<em>Social Science Computer Review</em>. <a href="https://doi.org/10.1177/08944393251328309">doi</a></mark></p>
+
 <p>2025.“Mapping party systems over time: A spatial distribution of ideological competition in Chile.”<em>Journal of Political Ideologies</em>. <a href="https://doi.org/10.1080/13569317.2025.2452179">doi</a></mark></p>
 
  <p>2024. Between Gattopardismo and Ideational Change: The Mainstream Chilean Right's Winding Road to Moderation, in <em>The Recasting of the Latin American Right
