--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ mark {
 <p>2025.“Mapping party systems over time: A spatial distribution of ideological competition in Chile.”<em>Journal of Political Ideologies</em>. <a href="https://doi.org/10.1080/13569317.2025.2452179">doi</a></mark></p>
 
  <p>2024. Between Gattopardismo and Ideational Change: The Mainstream Chilean Right's Winding Road to Moderation, in <em>The Recasting of the Latin American Right
-Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloyd and Gabriel Vommaro].</em>. (with  Stèphanie Alenda, Miguel Ángel López, and Nicolás Miranda). <a href="https://www.cambridge.org/it/universitypress/subjects/politics-international-relations/latin-american-government-politics-and-policy/recasting-latin-american-right-polarization-and-conservative-reactions?format=HB&isbn=9781009427449">Cambridge University Press</a></mark></p>
+Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloyd and Gabriel Vommaro] </em>. (with  Stèphanie Alenda, Miguel Ángel López, and Nicolás Miranda). <a href="https://www.cambridge.org/it/universitypress/subjects/politics-international-relations/latin-american-government-politics-and-policy/recasting-latin-american-right-polarization-and-conservative-reactions?format=HB&isbn=9781009427449">Cambridge University Press</a></mark></p>
 
 <p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.”<em>Party Politics</em>. 30(6): 1126-1142. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></mark></p>
 
