--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,13 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+
+<li>20250328- ¿Diablos por conocer?</li>  
+<li>20250327 - El país necesita garantías</li>  
+<li>20250326 - Bueno para todo</li>  
+<li>20250323 - ¿Un outsider?</li>  
+<li>20250130 - La reforma no puede ser una puerta</li>  
+<li>20250225 - Inconsistencia sistémica</li>  
 <li>20250115 - Los aprendices</li>  
 <li>20250111 - El auge del autoritarismo</li>  
 <li>20241231 - Los autocomplacientes</li>  
@@ -479,7 +486,14 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
-<li>20250125 - Kaise: El outsider de la derecha</li>
+
+
+<li>20250330 - La ironía que subyace al nuevo ministerio de Seguridad</li>
+<li>20250323 - El baile de Boric y Jara y el compositor José Piñera</li>
+<li>20250309 - Tres años de dogma</li>
+<li>20250302 - Por qué una candidatura de Carolina Tohá ayuda a la derecha tanto como a Boric</li>
+<li>20250222 - Rendezvous: El retorno de Bachelet</li>
+<li>20250125 - Kaiser: El outsider de la derecha</li>
 <li>20250116 - Entre la sospecha y el progreso: el futuro de las pensiones</li>
 <li>20250109 - La gallina de los huevos de oro: el debate sobre las pensiones</li>
 <li>20250102 - Autocomplacencia en el poder</li>
