--- a/columns/index.html
+++ b/columns/index.html
@@ -119,6 +119,7 @@ mark {
 <hr>
 <ul>
 
+<li>20250404- El crespúsculo del ídolo</li>  
 <li>20250328- ¿Diablos por conocer?</li>  
 <li>20250327 - El país necesita garantías</li>  
 <li>20250326 - Bueno para todo</li>  
