--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@ mark {
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
 <hr>
+<p style="display:inline-block;">
+  <img src="../img/book1.png" alt="USS" width="30" height="30">
+  Hello! </p>
+<hr>  
+
+<hr>
 <p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
 <hr>
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
