--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ mark {
 <meta property="og:description" content="Kenneth Bunker " />
 <meta property="og:site_name" content="Kenneth Bunker: Personal Website." />
 
+      <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    </style>  
+
 </head>
 
     <body><div class="container mt-5">
@@ -120,7 +128,7 @@ mark {
 
 <hr>
 <p style="display:inline-block;">
-  <img src="../img/book1.png" alt="USS" width="30" height="30">
+  <img src="../img/book1.png" alt="USS" width="70" height="70">
   Hello! </p>
 <hr>  
 
