--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@ mark {
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
 <hr>
-<p style="display:inline-block;">
-  <img src="../img/book1.png" alt="USS" width="70" height="70">
-  Hello! </p>
-<hr>  
+<div style="text-align: center;">
+  <p style="display: inline-block;">
+    <img src="../img/book1.png" alt="USS" width="70" height="70">
+    Coming soon!: Chile's Transformation Amidst Crisis: The Theseus Paradox.
+  </p>
+</div>
+<hr>
 
-<hr>
-<p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
-<hr>
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
 <p>I am currently an associate professor at San Sebastian University. Before that, I was an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan, and University of Bergamo. I founded the Democracy and Government Lab at USS and the Electoral Program at Universidad Central.</p>
@@ -188,6 +188,10 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 <hr>
 <p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">X</a>!</p>
 <hr>
+
+<p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
+<hr>
+
 <h2 id="links">Links</h2>
 <p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">X</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
 
