--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@ mark {
 <hr>
 <div style="text-align: center;">
   <p style="display: inline-block;">
-    <img src="../img/book1.png" alt="USS" width="70" height="70">
-    Coming soon!: Chile's Transformation Amidst Crisis: The Theseus Paradox.
+    Coming soon!
+    <img src="../img/book1.png" alt="USS" width="100" height="100">
+    Chile's Transformation Amidst Crisis: The Theseus Paradox.
   </p>
 </div>
 <hr>
