--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ mark {
 <hr>
 <div style="text-align: center;">
   <p style="display: inline-block;">
-    Coming soon!
+    NEW BOOK - Coming soon! - PRE-ORDER NOW
     <img src="../img/book1.png" alt="USS" width="100" height="100">
     Chile's Transformation Amidst Crisis: The Theseus Paradox.
   </p>
