--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ mark {
 <hr>
 <div style="text-align: center;">
   <p style="display: inline-block;">
-    NEW BOOK - Coming soon! - PRE-ORDER NOW
-    <img src="../img/book1.png" alt="USS" width="100" height="100">
-    Chile's Transformation Amidst Crisis: The Theseus Paradox.
+        CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX
+    <img src="../img/book1.png" alt="USS" width="200" height="200">
+        NEW BOOK - RELEASES NOVEMBER 2025 - PRE-ORDER NOW
   </p>
 </div>
 <hr>
