--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@ mark {
 <hr>
 <div style="text-align: center;">
   <p style="display: inline-block;">
-        CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX
-    <img src="../img/book1.png" alt="USS" width="200" height="200">
+        CHILE'S TRANSFORMATION AMIDST CRISIS: 
+        THE THESEUS PARADOX
+    <img src="../img/book1.png" alt="USS" width="150" height="150">
         NEW BOOK - RELEASES NOVEMBER 2025 - PRE-ORDER NOW
   </p>
 </div>
