--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ mark {
 <hr>
 <div style="text-align: center;">
   <p style="display: inline-block;">
-        CHILE'S TRANSFORMATION AMIDST CRISIS: 
-        THE THESEUS PARADOX
-    <img src="../img/book1.png" alt="USS" width="150" height="150">
-        NEW BOOK - RELEASES NOVEMBER 2025 - PRE-ORDER NOW
+    CHILE'S TRANSFORMATION AMIDST CRISIS: <br>
+    THE THESEUS PARADOX <br>
+    <img src="../img/book1.png" alt="USS" width="150" height="150"><br>
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
 </div>
 <hr>
