--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ mark {
 </figure>
 <p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide.</p>
 
-<p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press.</p> <p>Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
+<p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
 <hr>
 <div style="text-align: center;">
