--- a/contact/index.html
+++ b/contact/index.html
@@ -75,7 +75,7 @@
   Universidad San Sebastián </p>
 <blockquote>
 <p>Email: <a href="mailto:kenneth.bunker@uss.cl">kenneth.bunker@uss.cl</a></p>
-<p>Facultad de Economía y Gobierno</p>
+<p>Facultad de Economía, Negocios, y Gobierno</p>
 <p>Bellavista 7</p>
 <p>Recoleta, RM</p>
 <p>Chile</p>
