--- a/index.html
+++ b/index.html
@@ -65,14 +65,6 @@ mark {
 <meta property="og:description" content="Kenneth Bunker " />
 <meta property="og:site_name" content="Kenneth Bunker: Personal Website." />
 
-      <style>
-      img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>  
-
 </head>
 
     <body><div class="container mt-5">
@@ -124,16 +116,14 @@ mark {
 
 <p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
-<hr>
-<div style="text-align: center;">
-  <p style="display: inline-block;">
+<div style="border: 2px solid black; padding: 20px; text-align: center; display: inline-block;">
+  <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br>
     <img src="../img/book1.png" alt="USS" width="150" height="150"><br>
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
 </div>
-<hr>
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
