--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@ mark {
 
 <p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
-<div style="border: 2px solid black; padding: 20px; text-align: center; display: inline-block;">
+<div style="border: 1px solid #999; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
-    THE THESEUS PARADOX</strong><br>
-    <img src="../img/book1.png" alt="USS" width="150" height="150"><br>
-    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold;">PRE-ORDER NOW</a> – NOVEMBER 2025
+    THE THESEUS PARADOX</strong><br><br>
+    <img src="../img/book1.png" alt="USS" width="150" height="150"><br><br>
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
 </div>
 
