--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@ mark {
 </figure>
 <p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide.</p>
 
-<p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
-
-<div style="border: 1px solid #999; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
@@ -177,6 +175,11 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 </ul>
 <hr>
 <p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">X</a>!</p>
+
+<hr>
+
+<p>See my <a href="https://kennethbunker.github.io/columns"> columns</a> in the press. Check out my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
+
 <hr>
 
 <p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
