--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ mark {
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
     THE THESEUS PARADOX</strong><br><br>
-    <img src="../img/book1.png" alt="USS" width="150" height="150"><br><br>
+    <img src="../img/book.png" alt="USS" width="150" height="150"><br><br>
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
 </div>
