--- a/theseus/index.html
+++ b/theseus/index.html
@@ -76,11 +76,9 @@
 <blockquote>
 Hola
 </blockquote> 
+
 <hr>
-<p style="display:inline-block;">
-  <img src="../img/tresquintos.png" alt="Tresquintos" width="30" height="30">
-         Tresquintos </p>
-<blockquote>
+
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
@@ -89,19 +87,19 @@ Hola
     NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
   </p>
 </div>
-</blockquote>
+
+
 <hr>
-<p style="display:inline-block;">
-  <img src="../img/ptg.png" alt="PTG" width="30" height="30">
-  Politico Tech Global </p>
-<blockquote>
-<p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
-<p>Politico Tech Global</p>
-<p>Av. Presidente Kennedy 7900</p>
-<p>Vitacura, RM</p>
-<p>Chile</p>
-<a href="https://politicotechglobal.com">Web</a>
-</blockquote>
+
+<div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
+  <p style="margin: 0;">
+    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS:<br>
+    THE THESEUS PARADOX</strong><br><br>
+    <img src="../img/book1.png" alt="USS" width="170" height="170"><br><br>
+    NEW BOOK – <a href="https://link.springer.com/book/9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – NOVEMBER 2025
+  </p>
+</div>
+
 <hr>
 <h2 id="links">Links</h2>
 <p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://ww.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a></p> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker
