--- a/theseus/index.html
+++ b/theseus/index.html
@@ -12,7 +12,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Contact - Kenneth Bunker</title>
+    <title>Theseus - Kenneth Bunker</title>
     <meta name="description" content="Academic, Consultant, Columnist">
     <meta name="author" content='Kenneth Bunker'>
 
