--- a/theseus/index.html
+++ b/theseus/index.html
@@ -68,14 +68,8 @@
     </nav>
 </div>
 <hr>
-<div id="content">
-<div class="container">
-<p style="display:inline-block;">
-  <img src="../img/uss.jpeg" alt="USS" width="30" height="30">
-  Universidad San Sebastián </p>
-<blockquote>
-Hola
-</blockquote> 
+
+Welcome to the website of "Chiles"
 
 <hr>
 
