--- a/theseus/index.html
+++ b/theseus/index.html
@@ -68,8 +68,9 @@
     </nav>
 </div>
 <hr>
-
-Welcome to the website of "Chiles"
+<div id="content">
+<div class="container">
+<p style="display:inline-block;">Welcome to the website ... </p>
 
 <hr>
 
